     screen. Fixes bug #21978.
   * Fix bug #22231: partial moves now able to be continued in whiteboard
   * Fix an inefficient implementation of unit::invisible, in an effort to address slow performance problems:
     http://forums.wesnoth.org/viewtopic.php?f=4&t=12139&start=180#p569931
     (Also see gfgtdf's commits trying to optimize the minimap loop)

Version 1.11.15:
 * Graphics:
   * Fixed bug #22045: Only blit neutral surfaces.
 * Language and i18n:
   * Updated translations: Portuguese
 * Miscellaneous and bug fixes:
   * Reallow selection of another unit on same side without deselect first
   * Fix bug #22042: filesystem content disclosure issue affecting Lua APIs
   * Fix bug #21867: team flag colors not refreshed after making use of
     [modify_side] color= unless a new flag set is also provided.
   * Fix a bug where in movement records, "skip_sighted" was sometimes
     spelled as "skip_sighed".
   * Remove 'allow_new_game=no' entries from random map new game list
   * Fix bug #22020: make base units with variations help entry clickable
     from the 'Unit Description' menu entry or from side pane.
   * Fix bug #21977: ready blocked on scenario transition, when
     allow_new_game=yes
   * Fix minor issue mentioned in #21800: team names not displayed properly
     in debug mode.
   * Fixup to bug fix 21882: fight_on_without_leader replaced with
     "defeat_condition" flag  of team. remove_from_carryover_on_leaders_loss
     renamed to "remove_from_carryover_on_defeat". The WML developer now has
     much more control: Instead of 'fight_on_without_leader'=yes/no, they have
     have 'defeat_condition'=no_leader/no_units/always/never
   * As part of the fixup to bug fix 21882, victory_when_enemies_defeated
     was fixed up so that it will always behave properly even in corner
     cases in mp. It no longer uses the "is_observer" function of team.
   * Preemptively fix various problems with uncaught exceptions from the